test/should_not_compile/equality_exn.sml
fun checkEquality (f : unit -> ''a) = f () = f ();
checkEquality (fn () => Match : exn);
